move logo to public/image/

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lottery Number Generator</title>
     <link rel="stylesheet" href="public/css/index.css" />
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="public/image/logo.png">
   </head>
   <body>
     <div class="container">
