--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         -->
       </div>
       <div id="numbers"></div>
+      <div class="kribo">
+        <img src="public/image/kribo.svg" alt="kriboo person">
+      </div>
     </div>
     <script src="public/javascript/main.js"></script>
   </body>
