--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="submit">
         <button onclick="generate(6, 10, 49);">Generate</button>
         <!-- 
-        onclick() adalah event dalam javascript yang memberikan aksi ketika mouse melakukan klik pada element HTML. 
+        onclick() adalah event dalam javascript yang memberikan aksi ketika 
+        mouse melakukan klik pada element HTML. 
         -->
       </div>
       <div id="numbers"></div>
