--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lottery Number Generator</title>
     <link rel="stylesheet" href="public/css/index.css" />
-    <link rel="icon" href="public/image/logo.png">
+    <link rel="icon" href="public/image/logo.png" />
   </head>
   <body>
     <div class="container">
       <h1>JavaScript Lottery Number Generator</h1>
+      <div id="numbers"></div>
       <div class="submit">
         <button onclick="generate(6, 10, 49);">Generate</button>
         <!-- 
@@ -18,9 +19,8 @@
         mouse melakukan klik pada element HTML. 
         -->
       </div>
-      <div id="numbers"></div>
       <div class="kribo">
-        <img src="public/image/kribo.svg" alt="kriboo person">
+        <img src="public/image/kribo.svg" alt="kriboo person" />
       </div>
     </div>
     <script src="public/javascript/main.js"></script>
