rename folder image to images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lottery Number Generator</title>
     <link rel="stylesheet" href="public/css/index.css" />
-    <link rel="icon" href="public/image/logo.png" />
+    <link rel="icon" href="public/images/logo.png" />
   </head>
   <body>
     <div class="container">
@@ -20,7 +20,7 @@
         -->
       </div>
       <div class="kribo">
-        <img src="public/image/kribo.svg" alt="kriboo person" />
+        <img src="public/images/kribo.svg" alt="kriboo person" />
       </div>
     </div>
     <script src="public/javascript/main.js"></script>
